Update ROOM_ID and currentRoom variables

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 
 <script src="https://cdn.scaledrone.com/scaledrone.min.js"></script>
 <script>
-  const ROOM_ID = 'YlACLLtfd8xkDp0D';
-  let currentRoom = 'observable-default';
+  const ROOM_ID = 'hWmT5ZuGe51IgiMD';
+  let currentRoom = 'observable-room';
   const DEFAULT_NAME = 'unregistered';
 
   let username = localStorage.getItem('username') || DEFAULT_NAME;
