--- a/index.html
+++ b/index.html
@@ -6,24 +6,21 @@
 <title>Merged Chat Client</title>
 <link rel="icon" type="image/png" href="favicon.png">
 <style>
-  body {
-    margin:0; font-family:monospace; background:#000; color:#0f0;
-    display:flex; flex-direction:column; height:100vh; overflow:hidden;
-  }
-  #users { flex:0 0 auto; padding:10px; border-bottom:1px solid #0f0; font-size:12px; background:#000; }
-  #userlist { display:block; list-style:none; padding:0; margin:0; }
-  #chat { flex:1 1 auto; overflow-y:auto; padding:10px; border-bottom:1px solid #0f0; }
-  #input-container { flex:0 0 auto; position:relative; background:#000; border-top:1px solid #0f0; padding:5px; }
-  #privacy-note { position:absolute; top:-18px; right:10px; font-size:12px; color:#888; pointer-events:none; transition:all 0.3s ease; }
-  #privacy-note.shrink { opacity:0.5; transform:scale(0.85); }
-  #input { width:100%; padding:10px; background:#000; color:#0f0; border:none; font-family:monospace; font-size:14px; }
-  .system { color:gray; font-style:italic; }
-  .message { margin-bottom:5px; }
-  .username { font-weight:bold; }
-  .self { color:red !important; }
-  #discord-note { position:fixed; top:10px; right:10px; background-color:#2b2b2b; color:white; padding:6px 10px; border-radius:4px; font-size:13px; z-index:9999; box-shadow:0 0 5px rgba(0,0,0,0.5);}
-  #discord-note a { color:#7289da; text-decoration:none; }
-  #discord-note a:hover { text-decoration:underline; }
+body { margin:0; font-family:monospace; background:#000; color:#0f0; display:flex; flex-direction:column; height:100vh; overflow:hidden; }
+#users { flex:0 0 auto; padding:10px; border-bottom:1px solid #0f0; font-size:12px; background:#000; }
+#userlist { display:block; list-style:none; padding:0; margin:0; }
+#chat { flex:1 1 auto; overflow-y:auto; padding:10px; border-bottom:1px solid #0f0; }
+#input-container { flex:0 0 auto; position:relative; background:#000; border-top:1px solid #0f0; padding:5px; }
+#privacy-note { position:absolute; top:-18px; right:10px; font-size:12px; color:#888; pointer-events:none; transition:all 0.3s ease; }
+#privacy-note.shrink { opacity:0.5; transform:scale(0.85); }
+#input { width:100%; padding:10px; background:#000; color:#0f0; border:none; font-family:monospace; font-size:14px; }
+.system { color:gray; font-style:italic; }
+.message { margin-bottom:5px; }
+.username { font-weight:bold; }
+.self { color:red !important; }
+#discord-note { position:fixed; top:10px; right:10px; background-color:#2b2b2b; color:white; padding:6px 10px; border-radius:4px; font-size:13px; z-index:9999; box-shadow:0 0 5px rgba(0,0,0,0.5);}
+#discord-note a { color:#7289da; text-decoration:none; }
+#discord-note a:hover { text-decoration:underline; }
 </style>
 </head>
 <body>
@@ -43,45 +40,150 @@
 const ROOM_ID = 'hWmT5ZuGe51IgiMD';
 let currentRoom = 'observable-room';
 
-// Local user settings
+// User local settings
 let username = localStorage.getItem('username') || '';
 let color = localStorage.getItem('color') || '#0f0';
 let font = localStorage.getItem('font') || 'monospace';
 
-function setUserSetting(type, value) {
-  if(type==='name'){ localStorage.setItem('username', value); username=value; }
-  if(type==='color'){ localStorage.setItem('color', value); color=value; }
-  if(type==='font'){ localStorage.setItem('font', value); font=value; }
+// Save settings
+function setUserSetting(type, value){
+  if(type==='name'){ localStorage.setItem('username',value); username=value; }
+  if(type==='color'){ localStorage.setItem('color',value); color=value; }
+  if(type==='font'){ localStorage.setItem('font',value); font=value; }
 }
 
-// Initialize Scaledrone
-const drone = new Scaledrone(ROOM_ID, { data:{ name: username, color, font } });
+// Scaledrone client
+const drone = new ScaleDrone(ROOM_ID, { data:{ name:username, color, font } });
 let clientId = null;
 let members = [];
 
-drone.on('open', err => { if(err) return console.error(err); clientId = drone.clientId; });
+drone.on('open', error => {
+  if(error) return console.error(error);
+  clientId = drone.clientId;
+  subscribeToRoom(currentRoom);
+});
 
-let room = drone.subscribe(currentRoom);
+drone.on('close', event => console.log('Connection closed', event));
+drone.on('error', error => console.error(error));
 
 function subscribeToRoom(roomName){
-  if(room) room.unsubscribe();
+  if(window.room) window.room.unsubscribe();
   currentRoom = roomName;
-  room = drone.subscribe(currentRoom);
+  const room = drone.subscribe(currentRoom);
+  window.room = room;
 
   room.on('open', err => { if(err) console.error(err); });
-  room.on('members', m => { members = m; updateUserList(); addSystemMessage(`Switched to room: ${displayRoomName(currentRoom)}`); });
-  room.on('member_join', member => { members.push(member); updateUserList(); addSystemMessage(`${getName(member)} joined at ${getTime()}`); });
-  room.on('member_leave', ({id}) => { const i = members.findIndex(m=>m.id===id); if(i!==-1){ addSystemMessage(`${getName(members[i])} left at ${getTime()}`); members.splice(i,1); updateUserList(); } });
+  room.on('members', m => { members = m; updateUserList(); addSystemMessage(`Joined room: ${displayRoomName(currentRoom)}`); });
+  room.on('member_join', m => { members.push(m); updateUserList(); addSystemMessage(`${getName(m)} joined at ${getTime()}`); });
+  room.on('member_leave', ({id}) => { const i = members.findIndex(x=>x.id===id); if(i!==-1){ addSystemMessage(`${getName(members[i])} left at ${getTime()}`); members.splice(i,1); updateUserList(); } });
   room.on('data', (data, member) => { handleIncomingMessage(data, member); });
 }
 
-// Listen to room events
-room.on('open', err => { if(err) console.error(err); });
-room.on('members', m => { members = m; updateUserList(); addSystemMessage(`${username||'You'} joined`); });
-room.on('member_join', member => { members.push(member); updateUserList(); addSystemMessage(`${getName(member)} joined at ${getTime()}`); });
-room.on('member_leave', ({id}) => { const i=members.findIndex(m=>m.id===id); if(i!==-1){ addSystemMessage(`${getName(members[i])} left at ${getTime()}`); members.splice(i,1); updateUserList(); } });
-room.on('data', (data, member) => { handleIncomingMessage(data, member); });
-
+// Incoming messages handler
 function handleIncomingMessage(data, member){
   if(!member) return;
-  if(typeof data==='string') addMessage(getName(member), data, member.
+  if(typeof data==='string') addMessage(getName(member), data, member.clientData);
+  else if(data.type==='text') addMessage(getName(member), data.content, member.clientData);
+  else if(data.type==='html') addMessageHtml(getName(member), data.content, member.clientData);
+}
+
+// Get display name
+function getName(member){
+  if(member.id===clientId) return username || 'You';
+  return member.clientData?.name || member.clientData?.username || member.id;
+}
+
+function getTime(){ return new Date().toLocaleTimeString(); }
+
+function addMessage(name,msg,data={}){
+  const m=document.createElement('div');
+  m.className='message';
+  m.innerHTML=`<span class="username" style="color:${data?.color||'#0f0'}; font-family:${data?.font||font}">${escapeHtml(name)}:</span> <span style="font-family:${data?.font||font}">${escapeHtml(msg)}</span>`;
+  chat.appendChild(m);
+  chat.scrollTop = chat.scrollHeight;
+}
+
+function addMessageHtml(name,html,data={}){
+  const m=document.createElement('div');
+  m.className='message';
+  m.innerHTML=`<span class="username" style="color:${data?.color||'#0f0'}; font-family:${data?.font||font}">${escapeHtml(name)}:</span> <span style="font-family:${data?.font||font}">${html}</span>`;
+  chat.appendChild(m);
+  chat.scrollTop = chat.scrollHeight;
+}
+
+function addSystemMessage(text){
+  const m=document.createElement('div');
+  m.className='system';
+  m.textContent=`[SYSTEM] ${text}`;
+  chat.appendChild(m);
+  chat.scrollTop = chat.scrollHeight;
+}
+
+// User list
+function updateUserList(){
+  const ul = document.getElementById("userlist");
+  ul.innerHTML="";
+  const perCol=5;
+  const names = members.map(m=>{
+    const isSelf = m.id===clientId;
+    const style = isSelf?'color:red;font-weight:bold;':`color:${m.clientData?.color||'#0f0'}`;
+    const fname = m.clientData?.font||font;
+    return { uname:getName(m), style, fname };
+  });
+  let row=0,maxLen=0,currentColumn=document.createElement("ul");
+  currentColumn.style.display="inline-block"; currentColumn.style.verticalAlign="top"; currentColumn.style.marginRight="1ch"; currentColumn.style.listStyle="disc"; currentColumn.style.paddingLeft="20px";
+  names.forEach((u,i)=>{
+    const li=document.createElement("li");
+    li.style.cssText=`font-family:${u.fname}; ${u.style}`;
+    li.textContent=u.uname;
+    currentColumn.appendChild(li);
+    if(u.uname.length>maxLen) maxLen=u.uname.length;
+    row++;
+    if(row>=perCol || i===names.length-1){
+      currentColumn.style.minWidth=maxLen+1+"ch";
+      ul.appendChild(currentColumn);
+      row=0; maxLen=0;
+      if(i!==names.length-1){ currentColumn=document.createElement("ul"); currentColumn.style.display="inline-block"; currentColumn.style.verticalAlign="top"; currentColumn.style.marginRight="1ch"; currentColumn.style.listStyle="disc"; currentColumn.style.paddingLeft="20px"; }
+    }
+  });
+}
+
+// Input handling
+const input = document.getElementById("input");
+const privacyNote = document.getElementById("privacy-note");
+
+input.addEventListener('keydown', e=>{
+  if(e.key!=='Enter') return;
+  const val=input.value.trim();
+  if(!val) return;
+
+  if(val.startsWith('/')){
+    const [cmd,...args]=val.slice(1).split(' ');
+    const arg=args.join(' ').trim();
+    switch(cmd){
+      case 'name': if(!arg) return addSystemMessage('Usage: /name yourName'); setUserSetting('name',arg); location.reload(); break;
+      case 'color': if(!arg) return addSystemMessage('Usage: /color #hex'); setUserSetting('color',arg); location.reload(); break;
+      case 'font': if(!arg) return addSystemMessage('Usage: /font fontName'); setUserSetting('font',arg); location.reload(); break;
+      case 'html': if(!arg) return addSystemMessage('Usage: /html <raw HTML>'); drone.publish({room:currentRoom,message:{type:'html',content:arg}}); break;
+      case 'clear': chat.innerHTML=''; break;
+      case 'help': addSystemMessage('Commands: /name, /color, /font, /html, /clear, /help, /room, /default, /hub'); break;
+      case 'hub': if(arg) return addSystemMessage('Usage: /hub'); window.location.href='https://sparkpacket.github.io'; break;
+      case 'room': if(!arg) return addSystemMessage('Usage: /room room name'); subscribeToRoom('observable-'+arg.replace(/\s+/g,'_')); break;
+      case 'default': if(arg) return addSystemMessage('Usage: /default'); subscribeToRoom('observable-default'); break;
+      default: addSystemMessage(`Unknown command: ${cmd}`);
+    }
+  } else {
+    // Send as plain string for UGPS compatibility
+    drone.publish({ room: currentRoom, message: val });
+  }
+  input.value=''; privacyNote.classList.remove("shrink");
+});
+
+input.addEventListener("input",()=>{ if(input.value.trim().length>0){ privacyNote.classList.add("shrink"); } else { privacyNote.classList.remove("shrink"); } });
+input.addEventListener("blur",()=>{ privacyNote.classList.remove("shrink"); });
+
+function escapeHtml(s){ return s.replace(/[&<"']/g,m=>({'&':'&amp;','<':'&lt;','"':'&quot;',"'":'&#039;'}[m])); }
+
+</script>
+</body>
+</html>
