--- a/index.html
+++ b/index.html
@@ -7,8 +7,32 @@
 <link rel="icon" type="image/png" href="favicon.png">
 <style>
 body { margin:0; font-family:monospace; background:#000; color:#0f0; display:flex; flex-direction:column; height:100vh; overflow:hidden; }
-#users { flex:0 0 auto; padding:10px; border-bottom:1px solid #0f0; font-size:12px; background:#000; }
-#userlist { display:block; list-style:none; padding:0; margin:0; }
+#users {
+  flex: 0 0 auto;
+  padding: 10px;
+  border-bottom: 1px solid #0f0;
+  font-size: 12px;
+  background: #000;
+  max-height: 150px;      /* limit the height */
+  overflow-y: auto;       /* scroll if too many users */
+}
+
+#userlist {
+  display: flex;          /* use flex for columns */
+  flex-wrap: wrap;        /* wrap to next row if needed */
+  gap: 10px;              /* spacing between columns */
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+#userlist ul {
+  display: flex;
+  flex-direction: column; /* column layout inside each mini-list */
+  margin: 0;
+  padding-left: 20px;     /* for bullets */
+  list-style: disc;
+}
 #chat { flex:1 1 auto; overflow-y:auto; padding:10px; border-bottom:1px solid #0f0; }
 #input-container { flex:0 0 auto; position:relative; background:#000; border-top:1px solid #0f0; padding:5px; }
 #privacy-note { position:absolute; top:-18px; right:10px; font-size:12px; color:#888; pointer-events:none; transition:all 0.3s ease; }
